criação do componente título

--- a/app-lista-compras/src/components/navMenu/style.css
+++ b/app-lista-compras/src/components/navMenu/style.css
@@ -1,4 +1,4 @@
-.NavOpt ul {
+.menu_lista {
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -8,7 +8,7 @@
     font-weight: bold;
 }
 
-.NavOpt li {
+.menu_itens {
     margin: 10px;
     list-style: none;
     cursor: pointer;
