--- a/app-lista-compras/src/App.css
+++ b/app-lista-compras/src/App.css
@@ -1,3 +1,11 @@
+:root {
+  --mobile: 320px;
+  --tablet: 768px;
+  --desktop: 1024px;
+  --large-desktop: 1200px;
+}
+
+
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +15,7 @@
 
 .App {
   width: 100vw;
+  min-width: var(--mobile);
   height: 100vh;
   background-color: var(--primary-color);
 }
