--- a/app-lista-compras/src/components/header/style.css
+++ b/app-lista-compras/src/components/header/style.css
@@ -1,4 +1,4 @@
-header {
+.menu {
     width: 100%;
     border-bottom: 1px solid var(--secondary-color);
     box-shadow: 0px 0px 15px 3px var(--secondary-color);
