--- a/app-lista-compras/src/components/card/style.css
+++ b/app-lista-compras/src/components/card/style.css
@@ -7,8 +7,22 @@
     border-radius: 10px;
     box-shadow: 0px 0px 15px 3px var(--secondary-color);
     color: var(--secondary-color);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .card:hover{
     cursor: pointer;
+}
+
+.botao-delete{
+    margin: 0;
+    padding: 0;
+    width: 36px;
+    height: 36px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 360px;
 }
