criado metodo post de listas

--- a/app-lista-compras/src/components/dialog/style.css
+++ b/app-lista-compras/src/components/dialog/style.css
@@ -1,3 +1,10 @@
-.dialog{
-    background-color: red;
+.container-flex{
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px 10px;
+ 
+}
+
+.button-add {
+    cursor: pointer;
 }
