reorganização em rotas e implementação do componente de produtos de cada lista

--- a/app-lista-compras/src/App.css
+++ b/app-lista-compras/src/App.css
@@ -15,7 +15,8 @@
 
 .App {
   width: 100vw;
+  min-height: 100vh;
   min-width: var(--mobile);
-  height: 100vh;
   background-color: var(--primary-color);
+  overflow: hidden;
 }
