--- a/app-lista-compras/src/index.css
+++ b/app-lista-compras/src/index.css
@@ -5,9 +5,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--primary-color);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  width: 100vw;
+  min-height: 100vh;
+  min-width: var(--mobile);
+  overflow: hidden;
+}
+
+.App-header{
+  background-color: var(--primary-color);
 }
