--- a/app-lista-compras/src/components/card/style.css
+++ b/app-lista-compras/src/components/card/style.css
@@ -12,6 +12,10 @@
     justify-content: space-between;
 }
 
+.card-nome{
+    width: 100%;
+    background-color: red;
+}
 .card-link p{
     width: 100%;
 }
