--- a/app-lista-compras/src/App.css
+++ b/app-lista-compras/src/App.css
@@ -1,5 +1,6 @@
 :root {
-  --mobile: 320px;
+  --mobilexs: 320px;
+  --mobile: 576px;
   --tablet: 768px;
   --desktop: 1024px;
   --large-desktop: 1200px;
