--- a/app-lista-compras/src/components/cards/listasCard/style.css
+++ b/app-lista-compras/src/components/cards/listasCard/style.css
@@ -1,3 +1,12 @@
+.pesquisa-container{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px auto;
+    width: 250px;
+}
+
 .card {
     margin: 10px;
     padding: 10px;
@@ -47,6 +56,9 @@
         max-width: 80%;
         margin: 0 auto;
     }
+
+
+
 }
 
 @media only screen and (min-width: 768px) {
