--- a/app-lista-compras/src/components/cards/produtosCards/style.css
+++ b/app-lista-compras/src/components/cards/produtosCards/style.css
@@ -41,21 +41,21 @@ body {
     }
 }
 
-@media only screen and (min-width: 768px) {
+@media (min-width: 768px) {
     .card-container {
         max-width: 70%;
         margin: 0 auto;
     }
 }
 
-@media only screen and (min-width: 1024px) {
+@media (min-width: 1024px) {
     .card-container {
         max-width: 60%;
         margin: 0 auto;
     }
 }
 
-@media only screen and (min-width: 1200px) {
+@media (min-width: 1200px) {
     .card-container {
         max-width: 45%;
         margin: 0 auto;
